@@ -1,8 +1,4 @@
-DIST FeedReader-1.2.1.tar.gz 970118 SHA256 cb24d6dcef46080f2aa61fdc1b0187a8c52aedf913e6f63325ee46c631e5c87a SHA512 386c4c137bb4abba918e4f987666358ebe3926b0d4d3b466648d2679efd218376baf1ff58c987dfff953e9b6f084a47db34df8044a3a64ecb1f8e560f0f09e74 WHIRLPOOL 3e6f62c18ffb1dbe669f969b76de496463a49804c3da5d9e35e8726e4cef45552291c94b33cf3129805720cacc51953d60dfb4b54658344c261b412f29ab847f
-DIST FeedReader-1.4.3.tar.gz 1097255 SHA256 e43ceb9eb866c2e8e16d460b6914e6450b2c97fe62f0730a2ec67a3c7d7f0a3c SHA512 bb4057608bbc7c5c5e92decc3222950f13cf6dc5fb1338f661b3f990a68b3ff28f7ecd3b68a90139fc4d4f90c0fa7b193a94a8819e10092a3d37f33a284640be WHIRLPOOL 316a8b6f599dd4c64800e040ebe11f7e9b702a1f2a762b32c0f35ca8098ef3fd35a1ca7ea77c362b0a0eb6450f42d39b1a8c112e8096d1b4af98b2e372b2d23f
 DIST v1.6.2.tar.gz 1102370 SHA256 c9ddb59d14a2cb04d00db07fcd90f3de07f9ae1f2fb0f21783db8e9a242991ed SHA512 ca24b96d270c3b880557baced1aa5a08f9ad11845cdab5e30b2c03381b3bfcad2b7e16310d5672efca75a7cbd1e47079f7c18083322cc56412a16a9968ea1033 WHIRLPOOL 9f8821d96433544b8aba19e813785febc18691ef7f821eb5193f4d6a37cfa2e1090e380389debb54ade4af85232b3b4b27c84e8770fb166e0a4bab160ff2f2de
-EBUILD feedreader-1.2.1-r1.ebuild 1443 SHA256 eb134c2603b871ae9b84796985056189156eb519b1d6a4e56e19a1e22ccf40a7 SHA512 c2d46936133aee10000d5d076908334587d968ca75bdb92b7735564620407287c964201298e661f2e0be704d80e44ae68ecd46418ec4c3de16dd6b326a1e41a7 WHIRLPOOL ae9ae971caac69a136fc3ea5f0103c89c2e7d935dc0589a07a15e5dcc57d46dc0ccd1edca5f6699dadbf2c676db17db60b6da95fa8c143746e6cc2281ec49a39
-EBUILD feedreader-1.4.3.ebuild 1432 SHA256 66ea321c389c080f3eb448ee35adba864e93c73b476b9156e7f90b3907a4b47d SHA512 695a82048e272cf0fd6b768c8e0694646e11c31e33bc03377b16f139575eeb53f446c69b9896232c6e082609b0a79ab15e3b27d4339dad7f063221ea662a7e7c WHIRLPOOL 259ada7f1794a8f653d80325611dbf8abd73564718db45c04065591398f0666a72d8796cacabf5eb0e708fc82df058d49840ab54a2f90e2629832b896c3fce04
-EBUILD feedreader-1.6.2.ebuild 1483 SHA256 15902bbbaa3d2adafaf1cd8660c27ae4ab79adc01a956c856a48049221c0ad85 SHA512 9baa49e4d56f82af0afec82c354067f9de5319ff6379f948aac9cd1ee52657ad11e5fe6b19f73db3ccce9944f312933b157140bc047750a257d49175b44a11b5 WHIRLPOOL 39eed83844a4ad02e79b70c9c3c11bd4b088f5476c7c0d6d8675f9f10f0b98a816bdd638a49f25dccd28b485c00d722711f8c6c0004d1477aee0bd2deaddeecb
-MISC ChangeLog 605 SHA256 d9cf02ee9212fd1acf6b1321416e74bc4f767ce1d140580efa21713f65e26c69 SHA512 c61a5563ddfd997ffdbda20d9618cec5fa3195295928ad044271572cb876cbbd28d247d22653145b9ef94a55dd9bcd6dcaedd8c78363427f96d74466987282b3 WHIRLPOOL f2523da04ef16fe8be1422a7d4591e124e037c7eb6d11d2e66e26c2c79755c05b0ed14673e204741d3cc60903af069b545dbecafaa4d17b0538be392ce9333a1
-MISC metadata.xml 338 SHA256 065c970f65dc2d874999563e23f1cd3b3eb7d81b3858c7c9fed5ede9c9230d03 SHA512 9f668348e070853e0b24d1bf8f18dcc33d80f40f8d70fe7363b6d008f3a1e841b14a3cadf94e40643b39b4fec18bb06df5ae0a3412b96cc5c43a8c5fe7aa1f19 WHIRLPOOL 51094d7ce385f827f140171e796cfa35a0acc4e69d6c5eea5e305af79be3c255d5d8d1b08fdb219a54e9771b6d8311a03845c1ef1ca4076cd93617d16cb35ed6
+EBUILD feedreader-1.6.2.ebuild 1483 SHA256 1475c9d87862efa0ba6fa1e1323891015de12d436ec0ca5edf47cd675f86fd5f SHA512 fc0f9f1b24d65e362614cf179f1474e7ca368ccaec1cbddd842ee501a58a5634b82e624399b9be943a4a4ad43f8765f6193edf65dc314a4bb46ecfa6b00efa25 WHIRLPOOL 0a7d06a9d651243919d90169c06d4390c1f8eed47135f01a5d9493dc04ede5a6b3afa93a068ff15c7c7a512458e1b3c5385b7a01ecc81b74b0b95dad8eeab8f3
+MISC ChangeLog 821 SHA256 905cc36286606714df3f73036ec0398049e586f758732b645d2ba1740d07600c SHA512 c44ee1fceff485030683cc1181df1af913217ab8904bc2eb0021fdf7c7b65f135389749001be45d125b718b4c410ab396a5a628a1ac89604ef3977cae2899f3f WHIRLPOOL b0ac347dab8df20e9c8d46b539ae8d662c3a2dabdc080dc63bd2737de145394e52705df8ce3106cba565f77e3c205f73c86a2d3d14d2955ece0c5cac42b813f5
+MISC metadata.xml 234 SHA256 f35b97f99a26d73cc441e1d93bfe25aaa4e9f7f6d90c8d05a74f7b7bc5b68472 SHA512 59d8156b3ca3e99c40d5a2a32de7edf2eb53279b2424998862589d6bad77617d23fc852afec0a92f8ac5bb54a88ebc504cc0641029c1936412e90ab03dfdd447 WHIRLPOOL 935a1401910a42f888c991e443a49275ea8b87976c5aa977f670053d97d18754231749749bc92d37d4b5f45ecf65914480942a11b5827b6c08fb24313a428431
