@@ -5,7 +5,4 @@
 		<email>manuel@fritteli.ch</email>
 		<name>Manuel Friedli</name>
 	</maintainer>
-	<use>
-		<flag name="webkit4">Use net-libs/webkit-gtk:4 instead of net-libs/webkit-gtk:3</flag>
-	</use>
 </pkgmetadata>
