@@ -1,3 +1,7 @@
+  01 Sep 2016; Manuel Friedli <manuel@fritteli.ch> -feedreader-1.2.1-r1.ebuild,
+  -feedreader-1.4.3.ebuild, feedreader-1.6.2.ebuild, metadata.xml:
+  net-news/feedreader:  updated to EAPI="6" and deleted old ebuilds
+
 *feedreader-1.6.2 (30 Aug 2016)
 
   30 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +feedreader-1.6.2.ebuild,
